# HSLU_I.BA_RAYTRACING.F2501_raytracer

./: Cargo.toml  README.md  TODO.md  toolchain.toml
.github/workflows/: rust.yml
examples/: semesterbild.rs  test_scene.rs  test_text.rs
src/: color.rs  color_traits.rs  extensions.rs  float_ext.rs  helpers.rs  image_buffer.rs  lib.rs  light_vector_traits.rs  macros.rs  main.rs  matrix.rs  random.rs  scalar.rs  scalar_traits.rs  simd_compat.rs  vector.rs  vector_mask_traits.rs  vector_traits.rs
src/geometry/: mod.rs  point.rs  ray.rs  render_geometry.rs  sphere.rs  triangle.rs
src/geometry/basic/: mod.rs  point.rs  sphere.rs  triangle.rs
src/geometry/composite/: bounded_plane.rs  mod.rs
src/output/: file.rs  mod.rs  window.rs
src/raytracing/: intersectable.rs  material.rs  mod.rs  raytracer.rs  surface_interaction.rs
src/renderer/: mod.rs  raytracer_renderer.rs  test_renderer.rs  test_renderer_3d_sphere_sw02.rs  test_renderer_light_color_sw03.rs  test_renderer_sw03_common_code.rs  test_renderer_vector.rs
src/scene/: mod.rs  scene.rs  scene_object.rs
src/scene/lighting/: light.rs  lightable.rs  mod.rs  pipeline.rs
