[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[lib]
name = "raytracer"
path = "src/lib.rs"

[[bin]]
name = "raytracer"
path = "src/main.rs"

[dependencies]
minifb = "0.28"
rayon = "1.10"
ultraviolet = { version = "0.9", features = ["mint", "int", "f64", "num-traits"] }

palette = { version = "0.7", git = "https://github.com/kije/palette.git", features = ["wide", "simba"] }


wide = "0.7"
# simd_aligned = "0.6"
simba = { version = "0.9", git = "https://github.com/kije/simba.git", features = ["wide", "partial_fixed_point_support", "rand"] }
num-traits = "0.2"
pastey = "0.1.0"
itertools = "0.14"
# by_address = "1.2.1"
tt-call = "1.0"
tt-equal = "0.1.2"

incr_stats = { version = "1.0", optional = true }

rand = { version = "0.8", features = ["min_const_gen", "nightly", "small_rng"] }
# todo use
o2o = "0.5.3"
michie = "3.0.2"
enum_dispatch = "0.3.13"
enumcapsulate = "0.6.2"



[dev-dependencies]
assert_float_eq = "1.1"

[features]
default = ["anti_aliasing"]
simd_render = []
simulate_slow_render = []
render_timing_debug = ["incr_stats"]
anti_aliasing = []
high_resolution = []
high_quality = ["anti_aliasing", "high_resolution"]

[patch.crates-io]
simba = { version = "0.9", git = "https://github.com/kije/simba.git", features = ["wide", "partial_fixed_point_support"] }